src/test/ui/object-lifetime/object-lifetime-default-from-box-error.stderr
error[E0621]: explicit lifetime required in the type of `ss`
  --> $DIR/object-lifetime-default-from-box-error.rs:18:5
   |
LL | fn load(ss: &mut SomeStruct) -> Box<dyn SomeTrait> {
   |             --------------- help: add explicit lifetime `'static` to the type of `ss`: `&mut SomeStruct<'static>`
...
LL |     ss.r
   |     ^^^^ lifetime `'static` required

error[E0621]: explicit lifetime required in the type of `ss`
  --> $DIR/object-lifetime-default-from-box-error.rs:31:12
   |
LL | fn store1<'b>(ss: &mut SomeStruct, b: Box<dyn SomeTrait+'b>) {
   |                   --------------- help: add explicit lifetime `'b` to the type of `ss`: `&mut SomeStruct<'b>`
...
LL |     ss.r = b;
   |            ^ lifetime `'b` required

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0621`.
